添加构建脚本

--- a/scripts/Makefile.define
+++ b/scripts/Makefile.define
@@ -1,4 +1,5 @@
-ifeq ($(CONFIG_COMPILER_OPTIMIZE_NONE), y) 
+CFLAGS :=
+ifeq ($(CONFIG_COMPILER_OPTIMIZE_NONE), y)
 	CFLAGS += -O0
 endif
 
@@ -12,5 +13,6 @@ endif
 
 CFLAGS += -g -Wall -Werror -fno-builtin -nostdinc -nostdlib -pipe
 
-AFLAGS := $(CFLAGS) -D__ASSEMBLY__ 
+AFLAGS := $(CFLAGS) -D__ASSEMBLY__
 
+LDFLAGS := -static
