--- a/scripts/Makefile.compiler
+++ b/scripts/Makefile.compiler
@@ -7,7 +7,7 @@ OBJCOPY  = $(CROSS_COMPILE)objcopy
 OBJDUMP  = $(CROSS_COMPILE)objdump
 SIZE     = $(CROSS_COMPILE)size
 NM       = $(CROSS_COMPILE)nm
+MAKE     = make
 
 $(if $(CROSS_COMPILE),,$(error CROSS_COMPILE is not set))
-
 
