--- a/scripts/Makefile.define
+++ b/scripts/Makefile.define
@@ -14,4 +14,6 @@ endif
 CFLAGS += -g -Wall -Werror -fno-builtin -nostdinc -nostdlib -pipe \
 	-I$(srctree)/sample/include
 
-LDFLAGS = -static
+AFLAGS += -D__ASSEMBLY__
+
+LDFLAGS += -static
