添加浮点上下文的保存与恢复

--- a/config/config.in
+++ b/config/config.in
@@ -22,18 +22,4 @@ endchoice
 
 endmenu
 
-menu "Arch"
-
-endmenu
-
-menu "Kernel"
-
-endmenu
-
-menu "Components"
-
-endmenu
-
-menu "Samples"
-
-endmenu
+source "arch/Kconfig"
