--- a/scripts/Makefile.clean
+++ b/scripts/Makefile.clean
@@ -1,6 +1,7 @@
 # ==========================================================================
 # Cleaning up
 # ==========================================================================
+include $(srctree)/.config
 
 src := $(obj)
 
