--- a/scripts/Makefile.define
+++ b/scripts/Makefile.define
@@ -12,8 +12,9 @@ ifeq ($(CONFIG_COMPILER_OPTIMIZE_SIZE), y)
 endif
 
 CFLAGS += -g -Wall -Werror -fno-builtin -nostdinc -nostdlib -pipe \
-	-I$(srctree)/sample/include
+	-I$(srctree)/sample/include \
+	-I$(srctree)/arch/arm64/include
 
 AFLAGS += -D__ASSEMBLY__
 
-LDFLAGS += -static
+LDFLAGS += -static --no-warn-rwx-segments
