--- a/scripts/Makefile.define
+++ b/scripts/Makefile.define
@@ -12,8 +12,11 @@ ifeq ($(CONFIG_COMPILER_OPTIMIZE_SIZE), y)
 endif
 
 CFLAGS += -g -Wall -Werror -fno-builtin -nostdinc -nostdlib -pipe \
-	-I$(srctree)/sample/include \
-	-I$(srctree)/arch/arm64/include
+	-I$(srctree)/sample/include
+
+ifeq ($(CONFIG_ARM64), y)
+	CFLAGS +=-I$(srctree)/arch/arm64/include
+endif
 
 AFLAGS += -D__ASSEMBLY__
 
