添加内核启动内存1:1映射

--- a/arch/arm64/src/Kbuild
+++ b/arch/arm64/src/Kbuild
@@ -2,7 +2,8 @@ obj-y := vector.o \
 	exception.o \
 	switch.o \
 	operate_regs.o \
-	mmu.o
+	mmu.o \
+	kernel_map.o
 
 obj-$(CONFIG_FPU_ENABLE) += fpu.o
 
