--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1,11 +1,16 @@
 config CONFIG_FPU_ENABLE
 	bool "Enable Floating Pointer Unit"
 	default n
-		help
-			This option will enable the floating procedure in system.
-
-config CONFIG_PAGE_SIZE
-	int "MMU Page Size"
-	default 0x1000
 	help
-			This option is used in configuring the Memory Management Unit (MMU) page size.
+		This option will enable the floating procedure in system.
+
+choice
+	prompt "Endiane Option"
+	default CONFIG_LITTLE_ENDIANE
+	help
+		This Option will enable endiane options.
+
+config CONFIG_LITTLE_ENDIANE
+	bool "Litte Endiane"
+endchoice
+
