--- a/scripts/Makefile.clean
+++ b/scripts/Makefile.clean
@@ -1,7 +1,7 @@
 # ==========================================================================
 # Cleaning up
 # ==========================================================================
-include $(srctree)/.config
+-include $(srctree)/.config
 
 src := $(obj)
 
