--- a/config/aarch64_defconfig
+++ b/config/aarch64_defconfig
@@ -1,5 +1,8 @@
-CONFIG_COMPILER_OPTIMIZE_NONE=y
+CONFIG_COMPILER_OPTIMIZE_SPEED=y
 CONFIG_ARM64=y
 CONFIG_FPU_ENABLE=y
 CONFIG_LITTLE_ENDIANE=y
 CONFIG_4K_PAGE_SIZE=y
+CONFIG_CPUS_MAX_NUM=2
+CONFIG_GIC_V2=y
+CONFIG_SMP=y
