添加中断服务程序向量表

--- a/arch/arm64/src/Kbuild
+++ b/arch/arm64/src/Kbuild
@@ -4,9 +4,12 @@ obj-y := vector.o \
 	operate_regs.o \
 	mmu.o \
 	kernel_map.o \
-	head.o
+	head.o \
+	isr.o
 
-obj-$(CONFIG_GIC_V2) += gic_v2.o
+obj-$(CONFIG_GIC_V2) += gic_v2.o \
+	isr_table.o \
+	irq.o
 
 obj-$(CONFIG_FPU_ENABLE) += fpu.o
 
