添加定时器相关接口

--- a/arch/arm64/src/Kbuild
+++ b/arch/arm64/src/Kbuild
@@ -5,7 +5,8 @@ obj-y := vector.o \
 	mmu.o \
 	kernel_map.o \
 	head.o \
-	isr.o
+	isr.o \
+	arch_timer.o
 
 obj-$(CONFIG_GIC_V2) += gic_v2.o \
 	isr_table.o \
