--- a/arch/arm64/src/Kbuild
+++ b/arch/arm64/src/Kbuild
@@ -8,7 +8,8 @@ obj-y := vector.o \
 	isr.o \
 	arch_timer.o \
 	cpu.o \
-	arch_task.o
+	arch_task.o \
+	stack_trace.o
 
 obj-$(CONFIG_GIC_V2) += gic_v2.o \
 	isr_table.o \
