--- a/scripts/Makefile.define
+++ b/scripts/Makefile.define
@@ -11,7 +11,7 @@ ifeq ($(CONFIG_COMPILER_OPTIMIZE_SIZE), y)
 	CFLAGS += -Os
 endif
 
-CFLAGS += -g -Wall -Werror -fno-builtin -nostdinc -nostdlib -pipe  \
+CFLAGS += -g -Wall -Wunused-function -fno-builtin -nostdinc -nostdlib -pipe  \
 
 INCLUDES := -I$(srctree)/sample/include \
 	-I$(srctree)/kernel/include \
