【优化】：限制CPU个数范围1~4

--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -27,6 +27,7 @@ endchoice
 config CONFIG_CPUS_MAX_NUM
 	int "CPUs Maximum Number"
 	default 2
+	range 1 4
 	help
 		This represents the number of phyiscal cores.
 
