--- a/config/aarch64_defconfig
+++ b/config/aarch64_defconfig
@@ -11,3 +11,4 @@ CONFIG_MSGQ_MAX_NUM=10
 CONFIG_MSGQ_MAX_SIZE=128
 CONFIG_KERNEL_STACK_SIZE=8192
 CONFIG_INTERRUPT_STACK_SIZE=8192
+CONFIG_TASK_001=y
