【新功能】：增加堆栈回溯SP指针，同时新增任务task_start/task_stop示例

--- a/samples/kernel/Kconfig
+++ b/samples/kernel/Kconfig
@@ -4,5 +4,8 @@ config CONFIG_TASK_001
 	bool "Kernel TASK 001"
 	default n
 
+config CONFIG_TASK_002
+	bool "Kernel TASK 002"
+	default y
 
 endmenu
