--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -1,3 +1,6 @@
 obj-$(CONFIG_TASK_001) := task_001.o
 obj-$(CONFIG_TASK_002) := task_002.o
 obj-$(CONFIG_TASK_003) := task_003.o
+obj-$(CONFIG_TASK_004) := task_004.o
+
+
