【新功能】：增加task_lock/task_unlock锁示例

--- a/samples/kernel/Kconfig
+++ b/samples/kernel/Kconfig
@@ -14,6 +14,10 @@ config CONFIG_TASK_003
 
 config CONFIG_TASK_004
 	bool "Kernel TASK 004"
+	default n
+
+config CONFIG_TASK_005
+	bool "Kernel TASK 005"
 	default y
 
 endmenu
