--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -2,5 +2,5 @@ obj-$(CONFIG_TASK_001) := task_001.o
 obj-$(CONFIG_TASK_002) := task_002.o
 obj-$(CONFIG_TASK_003) := task_003.o
 obj-$(CONFIG_TASK_004) := task_004.o
-
+obj-$(CONFIG_TASK_005) := task_005.o
 
