--- a/samples/kernel/Kconfig
+++ b/samples/kernel/Kconfig
@@ -18,6 +18,10 @@ config CONFIG_TASK_004
 
 config CONFIG_TASK_005
 	bool "Kernel TASK 005"
+	default n
+
+config CONFIG_TIMER_001
+	bool "Kernel Timer 001"
 	default y
 
 endmenu
