【新功能】：增加mutex示例

--- a/config/aarch64_defconfig
+++ b/config/aarch64_defconfig
@@ -11,4 +11,4 @@ CONFIG_MSGQ_MAX_NUM=10
 CONFIG_MSGQ_MAX_SIZE=128
 CONFIG_KERNEL_STACK_SIZE=8192
 CONFIG_INTERRUPT_STACK_SIZE=8192
-CONFIG_MSGQ_001=y
+CONFIG_MUTEX_001=y
