--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -5,5 +5,5 @@ obj-$(CONFIG_TASK_004) := task_004.o
 obj-$(CONFIG_TASK_005) := task_005.o
 obj-$(CONFIG_TIMER_001) := timer_001.o
 obj-$(CONFIG_MSGQ_001) := msgq_001.o
-
+obj-$(CONFIG_MUTEX_001) := mutex_001.o
 
