--- a/samples/kernel/Kconfig
+++ b/samples/kernel/Kconfig
@@ -26,6 +26,10 @@ config CONFIG_TIMER_001
 
 config CONFIG_MSGQ_001
 	bool "Kernel MSGQ 001"
+	default n
+
+config CONFIG_MUTEX_001
+	bool "Kernel MUTEX 001"
 	default y
 
 endmenu
