--- a/config/aarch64_defconfig
+++ b/config/aarch64_defconfig
@@ -11,4 +11,5 @@ CONFIG_MSGQ_MAX_NUM=10
 CONFIG_MSGQ_MAX_SIZE=128
 CONFIG_KERNEL_STACK_SIZE=8192
 CONFIG_INTERRUPT_STACK_SIZE=8192
-CONFIG_MUTEX_001=y
+CONFIG_SEM_001=y
+
