【新功能】：增加系统调用内核实现框架

--- a/kernel/src/Kbuild
+++ b/kernel/src/Kbuild
@@ -14,7 +14,8 @@ obj-y := string.o \
 	log.o \
 	percpu.o \
 	kernel.o \
-	timer.o
+	timer.o \
+	syscall_dispatch.o \
 
 obj-$(CONFIG_SMP) += smp.o
 
