【新功能】：增加系统调用框架，包括系统调用分发

--- a/arch/arm64/src/Kbuild
+++ b/arch/arm64/src/Kbuild
@@ -14,7 +14,8 @@ obj-y := vector.o \
 	cache.o \
 	tlb.o \
 	smccc.o \
-	cpu_ops_psci.o
+	cpu_ops_psci.o \
+	sync_exc.o
 
 obj-$(CONFIG_GIC_V2) += gic_v2.o \
 	isr_table.o \
