【新功能】：增加页表分配功能，同时调整基础宏定义

--- a/config/aarch64_defconfig
+++ b/config/aarch64_defconfig
@@ -12,4 +12,7 @@ CONFIG_MSGQ_MAX_SIZE=128
 CONFIG_KERNEL_STACK_SIZE=8192
 CONFIG_INTERRUPT_STACK_SIZE=8192
 CONFIG_SEM_001=y
+CONFIG_USER_SPACE=y
+CONFIG_PAGE_TABLE_MAX_NUM=32
+CONFIG_MEM_PARTITION_MAX_NUM=16
 
