--- a/samples/kernel/Kconfig
+++ b/samples/kernel/Kconfig
@@ -20,6 +20,10 @@ config CONFIG_TASK_005
 	bool "Kernel TASK 005"
 	default n
 
+config CONFIG_TASK_006
+	bool "User TASK 006"
+	default y
+
 config CONFIG_TIMER_001
 	bool "Kernel Timer 001"
 	default n
@@ -34,6 +38,6 @@ config CONFIG_MUTEX_001
 
 config CONFIG_SEM_001
 	bool "Kernel SEM 001"
-	default y
+	default n
 
 endmenu
