--- a/config/aarch64_defconfig
+++ b/config/aarch64_defconfig
@@ -11,7 +11,7 @@ CONFIG_MSGQ_MAX_NUM=10
 CONFIG_MSGQ_MAX_SIZE=128
 CONFIG_KERNEL_STACK_SIZE=8192
 CONFIG_INTERRUPT_STACK_SIZE=8192
-CONFIG_SEM_001=y
+CONFIG_TASK_006=y
 CONFIG_USER_SPACE=y
 CONFIG_PAGE_TABLE_MAX_NUM=32
 CONFIG_MEM_PARTITION_MAX_NUM=32
