--- a/arch/arm64/src/Kbuild
+++ b/arch/arm64/src/Kbuild
@@ -18,12 +18,15 @@ obj-y := vector.o \
 	sync_exc.o \
 	arch_mem_domain.o
 
-obj-$(CONFIG_GIC_V2) += gic_v2.o \
+obj-$(CONFIG_GIC_V2) += \
+	gic_v2.o \
 	isr_table.o \
 	irq.o
 
-obj-$(CONFIG_FPU_ENABLE) += fpu.o
+obj-$(CONFIG_FPU_ENABLE) +=  \
+	fpu.o
 
-obj-$(CONFIG_SMP) += arch_smp.o \
+obj-$(CONFIG_SMP) += \
+	arch_smp.o \
 	arch_atomic.o
 
