--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -3,9 +3,8 @@ obj-$(CONFIG_TASK_002) := task_002.o
 obj-$(CONFIG_TASK_003) := task_003.o
 obj-$(CONFIG_TASK_004) := task_004.o
 obj-$(CONFIG_TASK_005) := task_005.o
-obj-$(CONFIG_TASK_006) := task_006.o
 obj-$(CONFIG_TIMER_001) := timer_001.o
 obj-$(CONFIG_MSGQ_001) := msgq_001.o
 obj-$(CONFIG_MUTEX_001) := mutex_001.o
 obj-$(CONFIG_SEM_001) := sem_001.o
-
+obj-$(CONFIG_USER_TASK_001) := user_task_001.o
