--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -10,3 +10,4 @@ obj-$(CONFIG_SEM_001) := sem_001.o
 obj-$(CONFIG_USER_TASK_001) := user_task_001.o
 obj-$(CONFIG_USER_TASK_002) := user_task_002.o
 obj-$(CONFIG_USER_MSGQ_001) := user_msgq_001.o
+obj-$(CONFIG_USER_SEM_001) := user_sem_001.o
