【新功能】：增加Rring Buffer数据结构及其操作接口

--- a/kernel/src/Kbuild
+++ b/kernel/src/Kbuild
@@ -15,7 +15,8 @@ obj-y := string.o \
 	percpu.o \
 	kernel.o \
 	timer.o \
-	mem_domain.o
+	mem_domain.o \
+	ring_buffer.o
 
 obj-$(CONFIG_SMP) += \
 	smp.o
