--- a/kernel/src/Kbuild
+++ b/kernel/src/Kbuild
@@ -16,7 +16,8 @@ obj-y := string.o \
 	kernel.o \
 	timer.o \
 	mem_domain.o \
-	ring_buffer.o
+	ring_buffer.o \
+	fnmatch.o 
 
 obj-$(CONFIG_SMP) += \
 	smp.o
