--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -2,7 +2,7 @@ menu "Kernel"
 
 config CONFIG_SMP
 	bool "Enable Kernel SMP"
-	default n
+	default y
 	help
 		this option enables kernel smp to use multiple CPUs.
 
