【新功能】：增加libc库strrchr/memrchr函数

--- a/lib/libc/string/Kbuild
+++ b/lib/libc/string/Kbuild
@@ -13,6 +13,8 @@ obj-y := \
 	strcoll.o \
 	strxfrm.o \
 	strchr.o \
+	strrchr.o \
 	stpcpy.o \
 	stpncpy.o \
-	strchrnul.o
+	strchrnul.o \
+	memrchr.o
