【代码优化】：调整应用目录

--- a/samples/Kconfig
+++ b/samples/Kconfig
@@ -1,5 +1,11 @@
-menu "Samples"
+menu "Applications"
 
+if CONFIG_USER_SPACE
+source "samples/user/Kconfig"
+endif
+
+if !CONFIG_USER_SPACE
 source "samples/kernel/Kconfig"
+endif
 
 endmenu
