【新功能】：增加libc库bcmp/bcopy/bzero/index/rindex函数

--- a/lib/libc/string/Kbuild
+++ b/lib/libc/string/Kbuild
@@ -36,4 +36,9 @@ obj-y := \
 	strcasestr.o \
 	strncasecmp.o \
 	memrchr.o \
-	mempcpy.o
+	mempcpy.o \
+	bcmp.o \
+	bcopy.o \
+	bzero.o \
+	index.o \
+	rindex.o
