【新功能】：支持Libc库通过配置设置编译

--- a/config/config.in
+++ b/config/config.in
@@ -24,5 +24,6 @@ endmenu
 
 source "arch/Kconfig"
 source "kernel/Kconfig"
+source "lib/Kconfig"
 source "components/Kconfig"
 source "samples/Kconfig"
