【新功能】：增加libc的atoi/atol/atoll/bsearch/labs/llabs/div/ldiv/lldiv/qsort/rand函数

--- a/lib/libc/stdlib/Kbuild
+++ b/lib/libc/stdlib/Kbuild
@@ -1,2 +1,13 @@
 obj-$(CONFIG_LIBC_STD) := \
-	abs.o
+	atoi.o \
+	atol.o \
+	atoll.o \
+	rand.o \
+	bsearch.o \
+	qsort.o \
+	abs.o \
+	labs.o \
+	llabs.o \
+	div.o \
+	ldiv.o \
+	lldiv.o
