【新功能】：增加libc的strtol/strtoul/strtoll/strtoull函数

--- a/lib/libc/stdlib/Kbuild
+++ b/lib/libc/stdlib/Kbuild
@@ -2,6 +2,9 @@ obj-$(CONFIG_LIBC_STD) := \
 	atoi.o \
 	atol.o \
 	atoll.o \
+	strtol.o \
+	strtoul.o \
+	strtoll.o \
 	rand.o \
 	bsearch.o \
 	qsort.o \
