【新功能】：支持内核堆使用独立节，同时优化内核堆初始化流程

--- a/components/rpmsg/Kconfig
+++ b/components/rpmsg/Kconfig
@@ -16,6 +16,7 @@ config CONFIG_RPMSG_KERNEL_USE
 
 config CONFIG_RPMSG_USER_USE
 	bool "Enable RPMSG User Use"
+	depends on CONFIG_USER_SPACE
 
 endchoice
 
