--- a/samples/user/Kbuild
+++ b/samples/user/Kbuild
@@ -4,3 +4,5 @@ obj-$(CONFIG_USER_TASK_003) := user_task_003.o
 obj-$(CONFIG_USER_MSGQ_001) := user_msgq_001.o
 obj-$(CONFIG_USER_SEM_001) := user_sem_001.o
 obj-$(CONFIG_USER_MUTEX_001) := user_mutex_001.o
+obj-$(CONFIG_LIBC_STRING) := user_libc_string.o
+obj-$(CONFIG_LIBC_STD) := user_libc_std.o
