【新功能】：Libc库增加sched_getscheduler函数

--- a/lib/libc/sched/Kbuild
+++ b/lib/libc/sched/Kbuild
@@ -1,5 +1,6 @@
 obj-$(CONFIG_LIBC_SCHED) := \
 	sched_yield.o \
 	sched_get_priority_max.o \
-	sched_getparam.o
+	sched_getparam.o \
+	sched_getscheduler.o
 	
