--- a/lib/libc/sched/Kbuild
+++ b/lib/libc/sched/Kbuild
@@ -2,5 +2,6 @@ obj-$(CONFIG_LIBC_SCHED) := \
 	sched_yield.o \
 	sched_get_priority_max.o \
 	sched_getparam.o \
-	sched_getscheduler.o
+	sched_getscheduler.o \
+	sched_rr_get_interval.o
 	
