【新功能】：Libc库增加sched_setscheduler函数

--- a/lib/libc/sched/Kbuild
+++ b/lib/libc/sched/Kbuild
@@ -3,5 +3,6 @@ obj-$(CONFIG_LIBC_SCHED) := \
 	sched_get_priority_max.o \
 	sched_getparam.o \
 	sched_getscheduler.o \
-	sched_rr_get_interval.o
+	sched_rr_get_interval.o \
+	sched_setscheduler.o
 	
