【新功能】：Libc库增加sched_setparam函数

--- a/lib/libc/sched/Kbuild
+++ b/lib/libc/sched/Kbuild
@@ -4,5 +4,6 @@ obj-$(CONFIG_LIBC_SCHED) := \
 	sched_getparam.o \
 	sched_getscheduler.o \
 	sched_rr_get_interval.o \
-	sched_setscheduler.o
+	sched_setscheduler.o \
+	sched_setparam.o
 	
