--- a/lib/libc/sched/Kbuild
+++ b/lib/libc/sched/Kbuild
@@ -5,5 +5,6 @@ obj-$(CONFIG_LIBC_SCHED) := \
 	sched_getscheduler.o \
 	sched_rr_get_interval.o \
 	sched_setscheduler.o \
-	sched_setparam.o
+	sched_setparam.o \
+	sched_cpucount.o
 	
