【新功能】：增加Libc库sched_getaffinity/sched_setaffinity函数

--- a/lib/libc/sched/Kbuild
+++ b/lib/libc/sched/Kbuild
@@ -7,5 +7,6 @@ obj-$(CONFIG_LIBC_SCHED) := \
 	sched_setscheduler.o \
 	sched_setparam.o \
 	sched_cpucount.o \
-	sched_getcpu.o
+	sched_getcpu.o \
+	affinity.o
 	
