【代码优化】：规范内核应用名称

--- a/samples/kernel/Kbuild
+++ b/samples/kernel/Kbuild
@@ -1,9 +1,9 @@
-obj-$(CONFIG_TASK_001) := task_001.o
-obj-$(CONFIG_TASK_002) := task_002.o
-obj-$(CONFIG_TASK_003) := task_003.o
-obj-$(CONFIG_TASK_004) := task_004.o
-obj-$(CONFIG_TIMER_001) := timer_001.o
-obj-$(CONFIG_MSGQ_001) := msgq_001.o
-obj-$(CONFIG_MUTEX_001) := mutex_001.o
-obj-$(CONFIG_SEM_001) := sem_001.o
-obj-$(CONFIG_RPMSG_001) := rpmsg_001.o
+obj-$(CONFIG_TASK_DELAY) := example_task_delay.o
+obj-$(CONFIG_TASK_STOP) := example_task_stop.o
+obj-$(CONFIG_TASK_SUSPEND) := example_task_suspend.o
+obj-$(CONFIG_TASK_AFFINITY) := example_task_affinity.o
+obj-$(CONFIG_TIMER_EXAMPLE) := example_timer.o
+obj-$(CONFIG_MSGQ_EXAMPLE) := example_msgq.o
+obj-$(CONFIG_MUTEX_EXAMPLE) := example_mutex.o
+obj-$(CONFIG_SEM_EXAMPLE) := example_sem.o
+obj-$(CONFIG_RPMSG_EXAMPLE) := example_rpmsg.o
