--- a/samples/kernel/Kconfig
+++ b/samples/kernel/Kconfig
@@ -2,35 +2,62 @@ menu "Kernel Applications"
 
 choice
 	bool "Select Kernel Application"
-	default CONFIG_TASK_001
+	default CONFIG_TASK_DELAY
 
-config CONFIG_TASK_001
-	bool "Kernel TASK 001"
+config CONFIG_TASK_DELAY
+	bool "Kernel Task Delay"
+	help
+		This configuration enables a simple task delay example implementation
+		that demonstrates how to delay a task for a specified number of ticks.
 
-config CONFIG_TASK_002
-	bool "Kernel TASK 002"
+config CONFIG_TASK_STOP
+	bool "Kernel Task Stop"
+	help
+		This configuration enables a simple task stopping example implementation
+		that demonstrates how to gracefully stop a task.
 
-config CONFIG_TASK_003
-	bool "Kernel TASK 003"
+config CONFIG_TASK_SUSPEND
+	bool "Kernel Task Suspend"
+	help
+		This configuration enables a simple task suspending example implementation
+		that demonstrates how to suspend a task.
 
-config CONFIG_TASK_004
-	bool "Kernel TASK 004"
+config CONFIG_TASK_AFFINITY
+	bool "Kernel Task Affinity"
+	help
+		This configuration enables a simple task affinity example implementation
+		that demonstrates how to set the task affinity.
 
-config CONFIG_TIMER_001
-	bool "Kernel Timer 001"
+config CONFIG_TIMER_EXAMPLE
+	bool "Kernel Timer Example"
+	help
+		This configuration enables a simple timer example that demonstrates how 
+		to use a timer within the kernel.
 
-config CONFIG_MSGQ_001
-	bool "Kernel MSGQ 001"
+config CONFIG_MSGQ_EXAMPLE
+	bool "Kernel Messge Queue Example"
+	help
+		This configuration enables a simple message queue example that demonstrates
+		how to use a message queue within the kernel.
 
-config CONFIG_MUTEX_001
-	bool "Kernel MUTEX 001"
+config CONFIG_MUTEX_EXAMPLE
+	bool "Kernel Mutex Example"
+	help
+		This configuration enables a simple mutex example that demonstrates how to 
+		use a mutex within the kernel.
 
-config CONFIG_SEM_001
-	bool "Kernel SEM 001"
+config CONFIG_SEM_EXAMPLE
+	bool "Kernel Semphore Example"
+	help
+		This configuration enables a simple semaphore example that demonstrates how
+		to use a semaphore within the kernel.
 
-config CONFIG_RPMSG_001
-	bool "Kernel RPMSG 001"
+config CONFIG_RPMSG_EXAMPLE
+	bool "Kernel Remote Rrocessor Message Example"
 	depends on CONFIG_RPMSG
+	help
+		This configuration enables a simple remote process message example that 
+		demonstrates how to use a remote process message within the kernel.
 
 endchoice
 
